# distributed-processing-flight-delay-project

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
examples/: flight.json
models/official/: flight_delay_models.joblib
notebooks/: flight_delay_pipeline.ipynb
reports/: ml_training_report.md  soutenance.md  spark_analysis.md
scripts/: generate_notebook.py
src/flight_delays/: __init__.py  analysis.py  dashboard.py  historical.py  ml_data.py  parsing.py  prediction.py  schedule.py  training.py
tests/: conftest.py  test_analysis.py  test_dashboard.py  test_ml_data.py  test_notebook.py  test_parsing.py  test_streamlit_app.py  test_training.py
