[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-delay-prediction"
version = "0.1.0"
description = "Pipeline PySpark et machine learning pour prédire les retards de vols américains."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "catboost>=1.2.8,<2",
    "joblib>=1.4,<2",
    "numpy==1.26.4",
    "pandas>=2.2,<3",
    "polars>=1.30,<2",
    "pyspark==3.5.5",
    "scikit-learn>=1.6,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
notebook = [
    "ipykernel>=6,<8",
    "ipywidgets>=8,<9",
    "jupyterlab>=4,<5",
    "matplotlib>=3.8,<4",
    "nbconvert>=7,<8",
    "seaborn>=0.13,<1",
]

[project.scripts]
prepare-spark-data = "flight_delays.parsing:main"
analyze-spark-data = "flight_delays.analysis:main"
train-flight-models = "flight_delays.training:main"
predict-flight = "flight_delays.prediction:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_delays"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
